<resources>
    <string name="app_name">Rental Management</string>
    <string name="brand1">Management</string>
    <string name="brand2">Rental</string>
    <string name="home">Home</string>
    <string name="collections">Lists</string>
    <string name="rentals">Rentals</string>
    <string name="computers">Computers</string>
    <string name="name_organisation">Name Organisation…</string>
    <string name="type_organisation">Type Organisation…</string>
    <string name="duree_organisation">Duree Organisation…</string>
    <string name="btn_location_text">Save</string>


</resources>
