<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLocation">

    <LinearLayout
       android:id="@+id/nameParent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit"
    >
        <EditText 
            android:id="@+id/nameOrganisation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/name_organisation"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
       android:id="@+id/typeParent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edit"
        android:layout_below="@id/nameParent"
        android:layout_marginTop="20dp"
    >
        <EditText 
            android:id="@+id/type_organisation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/type_organisation"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
       android:id="@+id/dureeParent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/typeParent"
        android:background="@drawable/custom_edit"
    >
        <EditText 
            android:id="@+id/duree_location"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/duree_organisation"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
           />
    </LinearLayout>
    <Button 
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/dureeParent"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_location_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
    />
</RelativeLayout>
