<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

    />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="@drawable/nav_back"
    android:weightSum="4"
    android:padding="5dp"
    android:gravity="center"
    android:baselineAligned="false">

    <LinearLayout
    android:id="@+id/home"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="5dp"
    android:layout_weight="1"
    android:gravity="center"
    >
    <View
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:id="@+id/homeView"
    android:background="@drawable/home"
    />
    <TextView
    android:id="@+id/homeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/home"
    android:textAppearance="@style/navitem"
    android:textColor="@color/enable"
    />
    </LinearLayout>
    <LinearLayout
    android:id="@+id/lists"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1"
    android:layout_marginStart="10dp"
    >
    <View
    android:layout_width="30dp"
    android:id="@+id/listsView"
    android:layout_height="30dp"
    android:background="@drawable/lists_disable"
    />
    <TextView
    android:id="@+id/listsText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/collections"
    android:textAppearance="@style/navitem"
    android:textColor="@color/disable"
    />
    </LinearLayout> 
     <LinearLayout
        android:id="@+id/rantals"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:gravity="center"
        >
        <View
        android:layout_width="30dp"
        android:id="@+id/rantalsView"
        android:layout_height="30dp"
        android:background="@drawable/rentals_disable"
        />
        <TextView
        android:layout_width="wrap_content"
        android:id="@+id/rantalsText"
        android:textColor="@color/disable"
        android:layout_height="wrap_content"
        android:text="@string/rentals"
        android:textAppearance="@style/navitem"
        />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/computers"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
   >
        <View
        android:id="@+id/computerView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/computers_disable"
        />
        <TextView
        android:layout_width="wrap_content"
        android:id="@+id/computersText"
        android:layout_height="wrap_content"
        android:text="@string/computers"
        android:textAppearance="@style/navitem"
        android:textColor="@color/disable"
        />
    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
